--- a/index.html
+++ b/index.html
@@ -7,17 +7,39 @@
 </head>
 <body>
     <header>
+    <h1>Магазин цветов</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Корзина</a></li>
+        </ul>
+    </nav>
+    <a href="#">Вход</a>
+    <a href="#">Регистрация</a>
+</header>
+<main> 
+    <div>
+        <h2>О нас</h2>
+        <img src="images/магазин.jpg" alt="" width="300">
+        <p>Описание</p>
+        <a href="#">К покупкам!</a>
+    </div>
+    <div>
+        <h2>Популярные товары</h2>
+        <div>
+            <img src="images/цветы.jpg" alt="" width="200">
+            <p>Розы 100 шт</p>
+        </div>
+        <div>
+            <img src="images/пионы.jpg" alt="">
+            <p>Пионы</p>
+        </div>
 
-    </header>
-    <main>
-        <h1> Заголовок текста 1</h1>
-        <h2> Заголовок текста 2</h2>
-        <h3> Заголовок текста 3</h3>
-        </p> Текст 1 абзац 1 </p>
-        </p> Текст 1 абзац 2 </p>
-    </main>
-    <footer>
-
-    </footer>
+    </div>
+</main>
+<footer>
+    <h2>Разработчик</h2>
+    <p>Гродикова Наталья Эк-31</p>
+</footer>
 </body>
 </html>
