--- a/index.html
+++ b/index.html
@@ -6,38 +6,93 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-    <h1>Магазин цветов</h1>
-    <nav>
+<nav>
+    <ul>
+        <li><a href="#">Blog</a></li> 
+        <li><a href="#">Press</a></li> 
+        <li><a href="#">Join Us</a></li>
+    </ul>
+<main>
+    <section>
+        <div>
+            <h6>BUSINESS thoughts 💭</h6>
+        </div>
+        <div>
+            <font>
+                <h1>For founders on <br> building, growing, and <br> selling your brand.</h1>
+            </font>
+        </div>
+        <div>
+            <h4>Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</h4>
+        </div>
         <ul>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Корзина</a></li>
+            <li><img src="images/1.jpg" alt="">
+                <h4>GIR: One Year In</h4>
+                <h5>Case Study</h5>
+            </li>
+            <li><img src="images/2.jpg" alt="">
+                <h4>Introducing Onsen</h4>
+                <h5>new additions</h5>
+            </li>
+            <li><img src="images/3.jpg" alt="">
+                <h4>Selling Your Shopify Brand: An Introduction</h4>
+                <h5>Mergers & Acquisitions 101</h5>
+            </li>
+            <li><img src="images/4.jpg" alt="">
+                <h4>5 Reasons We Are Optimistic for 2023</h4>
+                <h5>MERGERS & ACQUISITIONS 101</h5>
+            </li>
+            <li><img src="images/5.jpg" alt="">
+                <h4>Why Right Now is a Great Time to Sell Your Brand</h4>
+                <h5>MERGERS & ACQUISITIONS 101</h5>
+            </li>
+            <li><img src="images/6.jpg" alt="">
+                <h4>Selling Your Shopify Brand: Week 1</h4>
+                <h5>MERGERS & ACQUISITIONS 101</h5>
+            </li>
+            <li><img src="images/7.jpg" alt="">
+                <h4>Pattern's 2022 Update</h4>
+                <h5>THOUGHT LEADERSHIP</h5>
+            </li>
+            <li><img src="images/8.jpg" alt="">
+                <h4>Introducing Yield</h4>
+                <h5>New Additions</h5>
+            </li>
+            <li><img src="images/9.jpg" alt="">
+                <h4>Introducing Poketo</h4>
+                <h5>New Additions</h5>
+            </li>
         </ul>
-    </nav>
-    <a href="#">Вход</a>
-    <a href="#">Регистрация</a>
-</header>
-<main> 
-    <div>
-        <h2>О нас</h2>
-        <img src="images/магазин.jpg" alt="" width="300">
-        <p>Описание</p>
-        <a href="#">К покупкам!</a>
-    </div>
-    <div>
-        <h2>Популярные товары</h2>
         <div>
-            <img src="images/цветы.jpg" alt="" width="200">
-            <p>Розы 100 шт</p>
+            <h5>CONTACT</h5>
         </div>
         <div>
-            <img src="images/пионы.jpg" alt="">
-            <p>Пионы</p>
+            <h3>We're focused on building brands and a better future. <br> If you'd like to partner with us, we're here to talk.</h3>
         </div>
-
-    </div>
+        </section>
 </main>
 <footer>
+    <ul>
+        <li><a href="#">Open Spaces</a></li>
+        <li><a href="#">GIR</a></li>
+        <li><a href="#">Letterfolk</a></li>
+        <li><a href="#">Yield</a></li>
+        <li><a href="#">Poketo</a></li>
+        <li><a href="#">Equal Parts</a></li>
+    </ul>
+    <ul>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Press</a></li>
+    </ul>
+    <ul>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+    </ul>
+    <ul>
+        <h6>228 Park Ave S.</h6>
+        <h6>New York, NY 10003</h6>
+        <h6>acquisitions@patternbrands.com</h6>
+    </ul>
     <h2>Разработчик</h2>
     <p>Гродикова Наталья Эк-31</p>
 </footer>
