--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 <nav>
-    <ul>
-        <li><a href="#">Blog</a></li> 
-        <li><a href="#">Press</a></li> 
-        <li><a href="#">Join Us</a></li>
+    <ul class="menu">
+        <li class="menu_item"><a href="#">Blog</a></li> 
+        <li class="menu_item"><a href="#">Press</a></li> 
+        <li class="menu_item"><a href="#">Join Us</a></li>
     </ul>
 <main>
     <section>
         <div>
             <h6>BUSINESS thoughts 💭</h6>
         </div>
-        <div>
+        <header class="header">
             <font>
                 <h1>For founders on <br> building, growing, and <br> selling your brand.</h1>
             </font>
-        </div>
+        </header>
         <div>
             <h4>Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</h4>
         </div>
@@ -71,7 +72,7 @@
         </div>
         </section>
 </main>
-<footer>
+<footer class="footer">
     <ul>
         <li><a href="#">Open Spaces</a></li>
         <li><a href="#">GIR</a></li>
