--- a/index.html
+++ b/index.html
@@ -15,87 +15,85 @@
     </ul>
 <main>
     <section>
-        <div>
-            <h6>BUSINESS thoughts 💭</h6>
+        <div class="text">
+            <h6 class="=header_text">BUSINESS thoughts 💭</h6>
         </div>
-        <header class="header">
+        <header class="title">
             <font>
-                <h1>For founders on <br> building, growing, and <br> selling your brand.</h1>
+                <h1 class="header_title">For founders on <br> building, growing, and <br> selling your brand.</h1>
             </font>
         </header>
-        <div>
-            <h4>Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</h4>
+        <div class="text">
+            <h4 class="=header_text">Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</h4>
         </div>
-        <ul>
-            <li><img src="images/1.jpg" alt="">
-                <h4>GIR: One Year In</h4>
-                <h5>Case Study</h5>
+        <ul class="images">
+            <li class="image"><img src="images/1.jpg" alt="">
+                <h4 class="subtitle">GIR: One Year In</h4>
+                <h5 class="subtitle_min">Case Study</h5>
             </li>
-            <li><img src="images/2.jpg" alt="">
-                <h4>Introducing Onsen</h4>
-                <h5>new additions</h5>
+            <li class="image"><img src="images/2.jpg" alt="">
+                <h4 class="subtitle">Introducing Onsen</h4>
+                <h5 class="subtitle_min">new additions</h5>
             </li>
-            <li><img src="images/3.jpg" alt="">
-                <h4>Selling Your Shopify Brand: An Introduction</h4>
-                <h5>Mergers & Acquisitions 101</h5>
+            <li class="image"><img src="images/3.jpg" alt="">
+                <h4 class="subtitle">Selling Your Shopify Brand: An Introduction</h4>
+                <h5 class="subtitle_min">Mergers & Acquisitions 101</h5>
             </li>
-            <li><img src="images/4.jpg" alt="">
-                <h4>5 Reasons We Are Optimistic for 2023</h4>
-                <h5>MERGERS & ACQUISITIONS 101</h5>
+            <li class="image"><img src="images/4.jpg" alt="">
+                <h4 class="subtitle">5 Reasons We Are Optimistic for 2023</h4>
+                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
             </li>
-            <li><img src="images/5.jpg" alt="">
-                <h4>Why Right Now is a Great Time to Sell Your Brand</h4>
-                <h5>MERGERS & ACQUISITIONS 101</h5>
+            <li class="image"><img src="images/5.jpg" alt="">
+                <h4 class="subtitle">Why Right Now is a Great Time to Sell Your Brand</h4>
+                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
             </li>
-            <li><img src="images/6.jpg" alt="">
-                <h4>Selling Your Shopify Brand: Week 1</h4>
-                <h5>MERGERS & ACQUISITIONS 101</h5>
+            <li class="image"><img src="images/6.jpg" alt="">
+                <h4 class="subtitle">Selling Your Shopify Brand: Week 1</h4>
+                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
             </li>
-            <li><img src="images/7.jpg" alt="">
-                <h4>Pattern's 2022 Update</h4>
-                <h5>THOUGHT LEADERSHIP</h5>
+            <li class="image"><img src="images/7.jpg" alt="">
+                <h4 class="subtitle">Pattern's 2022 Update</h4>
+                <h5 class="subtitle_min">THOUGHT LEADERSHIP</h5>
             </li>
-            <li><img src="images/8.jpg" alt="">
-                <h4>Introducing Yield</h4>
-                <h5>New Additions</h5>
+            <li class="image"><img src="images/8.jpg" alt="">
+                <h4 class="subtitle">Introducing Yield</h4>
+                <h5 class="subtitle_min">New Additions</h5>
             </li>
-            <li><img src="images/9.jpg" alt="">
-                <h4>Introducing Poketo</h4>
-                <h5>New Additions</h5>
+            <li class="image"><img src="images/9.jpg" alt="">
+                <h4 class="subtitle">Introducing Poketo</h4>
+                <h5 class="subtitle_min">New Additions</h5>
             </li>
         </ul>
-        <div>
-            <h5>CONTACT</h5>
+        <div class="text">
+            <h5 class="text">CONTACT</h5>
         </div>
-        <div>
-            <h3>We're focused on building brands and a better future. <br> If you'd like to partner with us, we're here to talk.</h3>
+        <div class="text">
+            <h3 class="text">We're focused on building brands and a better future. <br> If you'd like to partner with us, we're here to talk.</h3>
         </div>
         </section>
 </main>
 <footer class="footer">
-    <ul>
-        <li><a href="#">Open Spaces</a></li>
-        <li><a href="#">GIR</a></li>
-        <li><a href="#">Letterfolk</a></li>
-        <li><a href="#">Yield</a></li>
-        <li><a href="#">Poketo</a></li>
-        <li><a href="#">Equal Parts</a></li>
+    <ul class="menu">
+        <li class="menu_item"><a href="#">Open Spaces</a></li>
+        <li class="menu_item"><a href="#">Open Spaces</a></li>
+        <li class="menu_item"><a href="#">Letterfolk</a></li>
+        <li class="menu_item"><a href="#">Yield</a></li>
+        <li class="menu_item"><a href="#">Poketo</a></li>
+        <li class="menu_item"><a href="#">Equal Parts</a></li>
     </ul>
-    <ul>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Press</a></li>
+    <ul class="menu">
+        <li class="menu_item"><a href="#">Careers</a></li>
+        <li class="menu_item"><a href="#">Press</a></li>
     </ul>
-    <ul>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
+    <ul class="menu_link">
+        <li class="menu_item"><a href="#">Instagram</a></li>
+        <li class="menu_item"><a href="#">Twitter</a></li>
     </ul>
-    <ul>
-        <h6>228 Park Ave S.</h6>
-        <h6>New York, NY 10003</h6>
-        <h6>acquisitions@patternbrands.com</h6>
+    <ul class="contact">
+        <h6 class="=header_contact">228 Park Ave S.</h6>
+        <h6 class="=header_contact">New York, NY 10003</h6>
+        <h6 class="=header_contact">acquisitions@patternbrands.com</h6>
     </ul>
-    <h2>Разработчик</h2>
-    <p>Гродикова Наталья Эк-31</p>
 </footer>
 </body>
 </html>
