--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -13,69 +14,68 @@
         <li class="menu_item"><a href="#">Press</a></li> 
         <li class="menu_item"><a href="#">Join Us</a></li>
     </ul>
+</nav>
 <main>
     <section>
         <div class="text">
             <h6 class="=header_text">BUSINESS thoughts 💭</h6>
         </div>
         <header class="title">
-            <font>
-                <h1 class="header_title">For founders on <br> building, growing, and <br> selling your brand.</h1>
-            </font>
+            <h1 class="header_title">For founders on <br> building, growing, and <br> selling your brand.</h1>
         </header>
         <div class="text">
-            <h4 class="=header_text">Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</h4>
+            <p4 class="=header_text">Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</p4>
         </div>
         <ul class="images">
-            <li class="image"><img src="images/1.jpg" alt="">
+            <li class="image"><img src="images/1.jpg" alt="Завтрак" width="312" height="312">
                 <h4 class="subtitle">GIR: One Year In</h4>
-                <h5 class="subtitle_min">Case Study</h5>
+                <p5 class="subtitle_min">Case Study</p5>
             </li>
-            <li class="image"><img src="images/2.jpg" alt="">
+            <li class="image"><img src="images/2.jpg" alt="Аксессуары" width="312" height="312">
                 <h4 class="subtitle">Introducing Onsen</h4>
-                <h5 class="subtitle_min">new additions</h5>
+                <p5 class="subtitle_min">new additions</p5>
             </li>
-            <li class="image"><img src="images/3.jpg" alt="">
+            <li class="image"><img src="images/3.jpg" alt="Текст1" width="312" height="312">
                 <h4 class="subtitle">Selling Your Shopify Brand: An Introduction</h4>
-                <h5 class="subtitle_min">Mergers & Acquisitions 101</h5>
+                <p5 class="subtitle_min">Mergers & Acquisitions 101</p5>
             </li>
-            <li class="image"><img src="images/4.jpg" alt="">
+            <li class="image"><img src="images/4.jpg" alt="НГ23" width="312" height="312">
                 <h4 class="subtitle">5 Reasons We Are Optimistic for 2023</h4>
-                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
+                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
             </li>
-            <li class="image"><img src="images/5.jpg" alt="">
+            <li class="image"><img src="images/5.jpg" alt="Часы" width="312" height="312">
                 <h4 class="subtitle">Why Right Now is a Great Time to Sell Your Brand</h4>
-                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
+                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
             </li>
-            <li class="image"><img src="images/6.jpg" alt="">
+            <li class="image"><img src="images/6.jpg" alt="Текст2" width="312" height="312">
                 <h4 class="subtitle">Selling Your Shopify Brand: Week 1</h4>
-                <h5 class="subtitle_min">MERGERS & ACQUISITIONS 101</h5>
+                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
             </li>
-            <li class="image"><img src="images/7.jpg" alt="">
+            <li class="image"><img src="images/7.jpg" alt="Миниатюра" width="312" height="312">
                 <h4 class="subtitle">Pattern's 2022 Update</h4>
-                <h5 class="subtitle_min">THOUGHT LEADERSHIP</h5>
+                <p5 class="subtitle_min">THOUGHT LEADERSHIP</p5>
             </li>
-            <li class="image"><img src="images/8.jpg" alt="">
+            <li class="image"><img src="images/8.jpg" alt="Чай" width="312" height="312">
                 <h4 class="subtitle">Introducing Yield</h4>
-                <h5 class="subtitle_min">New Additions</h5>
+                <p5 class="subtitle_min">New Additions</p5>
             </li>
-            <li class="image"><img src="images/9.jpg" alt="">
+            <li class="image"><img src="images/9.jpg" alt="Книги" width="312" height="312">
                 <h4 class="subtitle">Introducing Poketo</h4>
-                <h5 class="subtitle_min">New Additions</h5>
+                <p5 class="subtitle_min">New Additions</p5>
             </li>
         </ul>
         <div class="text">
             <h5 class="text">CONTACT</h5>
         </div>
         <div class="text">
-            <h3 class="text">We're focused on building brands and a better future. <br> If you'd like to partner with us, we're here to talk.</h3>
+            <p3 class="text">We're focused on building brands and a better future. <br> If you'd like to partner with us, we're here to talk.</p3>
         </div>
         </section>
 </main>
 <footer class="footer">
     <ul class="menu">
         <li class="menu_item"><a href="#">Open Spaces</a></li>
-        <li class="menu_item"><a href="#">Open Spaces</a></li>
+        <li class="menu_item"><a href="#">HGIR</a></li>
         <li class="menu_item"><a href="#">Letterfolk</a></li>
         <li class="menu_item"><a href="#">Yield</a></li>
         <li class="menu_item"><a href="#">Poketo</a></li>
@@ -86,13 +86,19 @@
         <li class="menu_item"><a href="#">Press</a></li>
     </ul>
     <ul class="menu_link">
-        <li class="menu_item"><a href="#">Instagram</a></li>
-        <li class="menu_item"><a href="#">Twitter</a></li>
+        <li class="menu_item"><a href="#">VK</a></li>
+        <li class="menu_item"><a href="#">Telegram</a></li>
     </ul>
     <ul class="contact">
-        <h6 class="=header_contact">228 Park Ave S.</h6>
-        <h6 class="=header_contact">New York, NY 10003</h6>
-        <h6 class="=header_contact">acquisitions@patternbrands.com</h6>
+        <li>
+            <p6 class="=header_contact">Машиностроителей 15</p6>
+            <p6 class="=header_contact">Йошкар-Ола</p6>
+        </li>
+        <li>
+            <p6 class="=header_contact">Гродикова Наталья</p6>
+            <p6 class="=header_contact">Качмашева Татьяна</p6>
+            <p6 class="=header_contact">Айглова Ангелина</p6>
+        </li>
     </ul>
 </footer>
 </body>
