--- a/index.html
+++ b/index.html
@@ -9,59 +9,59 @@
 </head>
 <body>
 <nav>
-    <ul class="menu">
+    <ul class="menu" container>
         <li class="menu_item"><a href="#">Blog</a></li> 
         <li class="menu_item"><a href="#">Press</a></li> 
         <li class="menu_item"><a href="#">Join Us</a></li>
     </ul>
 </nav>
-<main>
+<main class="main" container>
     <section>
         <div class="text">
-            <h6 class="=header_text">BUSINESS thoughts 💭</h6>
+            <p6 class="=header_text">BUSINESS thoughts 💭</p6>
         </div>
         <header class="title">
-            <h1 class="header_title">For founders on <br> building, growing, and <br> selling your brand.</h1>
+            <h2 class="header_title">For founders on <br> building, growing, and <br> selling your brand.</h2>
         </header>
         <div class="text">
             <p4 class="=header_text">Explore the brands joining Pattern <br> Brands, the sales process & the <br> founders behind them.👇🏽</p4>
         </div>
         <ul class="images">
-            <li class="image"><img src="images/1.jpg" alt="Завтрак" width="312" height="312">
-                <h4 class="subtitle">GIR: One Year In</h4>
-                <p5 class="subtitle_min">Case Study</p5>
+            <li class="image"><img src="images/1.png" alt="Завтрак" width="312" height="312">
+                <h5 class="subtitle">GIR: One Year In</h5>
+                <p6 class="subtitle_min">Case Study</p6>
             </li>
-            <li class="image"><img src="images/2.jpg" alt="Аксессуары" width="312" height="312">
-                <h4 class="subtitle">Introducing Onsen</h4>
-                <p5 class="subtitle_min">new additions</p5>
+            <li class="image"><img src="images/2.png" alt="Аксессуары" width="312" height="312">
+                <h5 class="subtitle">Introducing Onsen</h5>
+                <p6 class="subtitle_min">new additions</p6>
             </li>
-            <li class="image"><img src="images/3.jpg" alt="Текст1" width="312" height="312">
-                <h4 class="subtitle">Selling Your Shopify Brand: An Introduction</h4>
-                <p5 class="subtitle_min">Mergers & Acquisitions 101</p5>
+            <li class="image"><img src="images/3.png" alt="Текст1" width="312" height="312">
+                <h5 class="subtitle">Selling Your Shopify Brand: An Introduction</h5>
+                <p6 class="subtitle_min">Mergers & Acquisitions 101</p6>
             </li>
-            <li class="image"><img src="images/4.jpg" alt="НГ23" width="312" height="312">
-                <h4 class="subtitle">5 Reasons We Are Optimistic for 2023</h4>
-                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
+            <li class="image"><img src="images/4.png" alt="НГ23" width="312" height="312">
+                <h5 class="subtitle">5 Reasons We Are Optimistic for 2023</h5>
+                <p6 class="subtitle_min">MERGERS & ACQUISITIONS 101</p6>
             </li>
-            <li class="image"><img src="images/5.jpg" alt="Часы" width="312" height="312">
-                <h4 class="subtitle">Why Right Now is a Great Time to Sell Your Brand</h4>
-                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
+            <li class="image"><img src="images/5.png" alt="Часы" width="312" height="312">
+                <h5 class="subtitle">Why Right Now is a Great Time to Sell Your Brand</h5>
+                <p6 class="subtitle_min">MERGERS & ACQUISITIONS 101</p6>
             </li>
-            <li class="image"><img src="images/6.jpg" alt="Текст2" width="312" height="312">
-                <h4 class="subtitle">Selling Your Shopify Brand: Week 1</h4>
-                <p5 class="subtitle_min">MERGERS & ACQUISITIONS 101</p5>
+            <li class="image"><img src="images/6.png" alt="Текст2" width="312" height="312">
+                <h5 class="subtitle">Selling Your Shopify Brand: Week 1</h5>
+                <p6 class="subtitle_min">MERGERS & ACQUISITIONS 101</p6>
             </li>
-            <li class="image"><img src="images/7.jpg" alt="Миниатюра" width="312" height="312">
-                <h4 class="subtitle">Pattern's 2022 Update</h4>
-                <p5 class="subtitle_min">THOUGHT LEADERSHIP</p5>
+            <li class="image"><img src="images/7.png" alt="Миниатюра" width="312" height="312">
+                <h5 class="subtitle">Pattern's 2022 Update</h5>
+                <p6 class="subtitle_min">THOUGHT LEADERSHIP</p6>
             </li>
-            <li class="image"><img src="images/8.jpg" alt="Чай" width="312" height="312">
-                <h4 class="subtitle">Introducing Yield</h4>
-                <p5 class="subtitle_min">New Additions</p5>
+            <li class="image"><img src="images/8.png" alt="Чай" width="312" height="312">
+                <h5 class="subtitle">Introducing Yield</h5>
+                <p6 class="subtitle_min">New Additions</p6>
             </li>
-            <li class="image"><img src="images/9.jpg" alt="Книги" width="312" height="312">
-                <h4 class="subtitle">Introducing Poketo</h4>
-                <p5 class="subtitle_min">New Additions</p5>
+            <li class="image"><img src="images/9.png" alt="Книги" width="312" height="312">
+                <h5 class="subtitle">Introducing Poketo</h5>
+                <p6 class="subtitle_min">New Additions</p6>
             </li>
         </ul>
         <div class="text">
@@ -72,7 +72,7 @@
         </div>
         </section>
 </main>
-<footer class="footer">
+<footer class="footer" container>
     <ul class="menu">
         <li class="menu_item"><a href="#">Open Spaces</a></li>
         <li class="menu_item"><a href="#">HGIR</a></li>
