--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
                     <p>Айглова Ангелина Алексеевна</p>
                 </div>
             </footer>
-
+            <script src="scripts/script.js"></script>
         </body>
         </html>
